apps/base/ftb-revelations/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ftb-revelations
  namespace: app-ftb-revelations

spec:
  replicas: 1
  selector:
    matchLabels:
      app: ftb-revelations
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ftb-revelations
    spec:
      containers:
        - name: ftb-revelations
          image: itzg/minecraft-server:java8-multiarch
          imagePullPolicy: Always
          ports:
            - containerPort: 25565
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: ftb-revelations-data
