apps/base/ftb-revelations/ingressroute.yaml
apiVersion: v1
kind: Service
metadata:
  name: ftb-revelations
  namespace: app-ftb-revelations

spec:
  ports:
    - name: tcp
      port: 25565
  selector:
    app: ftb-revelations
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ftb-revelations
  namespace: app-ftb-revelations

spec:
  entryPoints:
    - minecraft
  routes:
    - match: HostSNI(`*`)
      services:
        - name: ftb-revelations
          port: 25565
